2007-08-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoDraftObject.m ([SOGoDraftObject
	-fetchMailForForwarding:sourceMail]): check the user preference
	for message forwarding and compose inline forwarded messages if required.

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent
	-sendEMailUsingTemplateNamed:_pageNameforOldObject:_oldObjectandNewObject:_newObjecttoAttendees:_attendees]):
	now use a template based on the language returned from the
	SOGoUser object.

	* SoObjects/Mailer/SOGoMailEnglishForward.m: new module containing
	a subclass of SOGoMailForward for English locale.

	* SoObjects/Mailer/SOGoMailFrenchForward.m: new module containing
	a subclass of SOGoMailForward for French locale.

	* SoObjects/Mailer/SOGoMailForward.[hm]: new module class that
	helps build template for inline forwarded messages.

2007-08-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/SOGoElements/SOGoIEConditional.m: new extension module class
	to handle "<var:if-ie>" template tags.

	* UI/SOGoElements: new extension bundle containing sogo-specific
	dynamic elements.

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-takeValuesFromRequest:_rqinContext:_ctx]): save the category
	selected in the dialog.
	([UIxComponentEditor -setComponent:newComponent]): retrieve the
	first category, if ever, of the calendar entity.

	* UI/MailerUI/UIxMailMainFrame.m ([UIxMailMainFrame
	-composeAction]): restored method since it is needed by the
	address book.

	* UI/MailerUI/UIxMailAccountActions.m ([UIxMailAccountActions
	-composeAction]): the address fields should be arrays and not
	simple strings.

	* UI/Common/UIxPageFrame.m ([UIxPageFrame -buildDate]): new method
	that returns the build date of SOGo in the template.

2007-08-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Contacts/SOGoContactGCSFolder.m ([SOGoContactGCSFolder
	-_flattenedRecords:records]): when the c_cn field is empty,